src/objects/Senior_Project_Compliance_Member__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Last_SO_Assigned__c</fullName>
        <description>Date the user was last assigned to a Sales Order</description>
        <label>Date Last SO Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Senior_Project_Compliance_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Senior Project Compliance Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Senior Project Compliance Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>